Add exercise image feature

--- a/index.html
+++ b/index.html
@@ -220,17 +220,16 @@
                 </div>
 
             </div>
+            <div class="bottom-container">
+               <div class="image-container">
+                    <img class="exercise-image" src="./images/deadlift.jpg" alt="photo-exercise">
+                <div class="exercise-title">DEADLIFT
+                    <div class="exercise-text"><p>Opis cwiczenia</p></div>
+                </div>
+            </div>
+            </div>
         </div>
     </div>
-    <div obiekty>
-        <div obiekt 1 skladajacy sie z 6 okienek>
-
-        </div>
-    </div>
-    </div>
-
-
-
     <script type="text/javascript" src="app.js"></script>
 </body>
 
