Add img beggining logic

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     <h3>3</h3>
                 </div>
                 <div class="grid-item rep7">
-                    <h3>15</h3>
+                    <h3>12-15</h3>
                 </div>
                 <div class="grid-item res7">
                     <h3>90s</h3>
@@ -221,12 +221,11 @@
 
             </div>
             <div class="bottom-container">
-               <div class="image-container">
+                <div class="image-container">
                     <img class="exercise-image" src="./images/deadlift.jpg" alt="photo-exercise">
-                <div class="exercise-title">DEADLIFT
-                    <div class="exercise-text"><p>Opis cwiczenia</p></div>
+                    <div class="exercise-title">DEADLIFT</div>
+                    <div class="exercise-text"><p >Opis cwiczenia</p></div>
                 </div>
-            </div>
             </div>
         </div>
     </div>
