Second Exercise Img functionality added

--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
             <div class="bottom-container">
                 <div class="image-container">
                     <img class="exercise-image" src="./images/deadlift.jpg" alt="photo-exercise">
-                    <div class="exercise-title">DEADLIFT</div>
-                    <div class="exercise-text"><p >Opis cwiczenia</p></div>
+                    <div class="exercise-title">Exercise Name</div>
+                    <div class="exercise-text"><p>Details</p></div>
                 </div>
             </div>
         </div>
