--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
                     </div>
                 </div>
-                <div class="dropdown split">
+                <div class="dropdown">
                     <button class="dropbtn">Split
 
                     </button>
                     <div class="dropdown-content">
-                        <a href="#">Chest</a>
+                        <a class="split-chest" href="#">Chest</a>
                         <a href="#">Shoulders</a>
                         <a href="#">Legs</a>
                     </div>
@@ -81,180 +81,204 @@
                 </div>
             </div>
         </div>
+        <div class="grid-container container-zero">
+            <div class="btn-container">
+            </div>
+            <div class="table-title or0">
+                <h3>Order</h3>
+            </div>
+            <div class="table-title ex ex0">
+                <h3>Exercise</h3>
+            </div>
+            <div class="table-title se0">
+                <h3>Sets</h3>
+            </div>
+            <div class="table-title rep0">
+                <h3>Reps</h3>
+            </div>
+            <div class="table-title res0">
+                <h3>Rest</h3>
+            </div>
+            <div class="table-title wei0">
+                <h3>Weight</h3>
+            </div>
+
+        </div>
         <div class="main-container">
-            <div class="grid-container">
+                    
+            <div class="grid-container container-one">
                 <div class="btn-container">
 
                     <button class="btn btn1" type="button"><img class="random-img" src="./images/random.png" alt="">
                         Shoulders </button>
                 </div>
                 <div class="grid-item or1">
-                    <h3>Order</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item ex ex1">
-                    <h3>Exercise</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item se1">
-                    <h3>Sets</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item rep1">
-                    <h3>Reps</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item res1">
-                    <h3>Rest</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item wei1">
-                    <h3>Weight</h3>
+                    <h3>-</h3>
                 </div>
 
             </div>
-            <div class="grid-container">
+            <div class="grid-container container-two">
                 <div class="btn-container">
                     <button class="btn btn2" type="button"><img class="random-img" src="./images/random.png" alt="">
                         <br> Legs </button>
                 </div>
                 <div class="grid-item or2">
-                    <h3>Order</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item ex ex2">
-                    <h3>Exercise</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item se2">
-                    <h3>Sets</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item rep2">
-                    <h3>Reps</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item res2">
-                    <h3>Rest</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item wei2">
-                    <h3>Weight</h3>
+                    <h3>-</h3>
                 </div>
 
             </div>
-            <div class="grid-container">
+            <div class="grid-container container-three">
                 <div class="btn-container">
                     <button class="btn btn3" type="button"><img class="random-img" src="./images/random.png" alt=""><br>
                         Chest </button>
                 </div>
                 <div class="grid-item or3">
-                    <h3>Order</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item ex ex3">
-                    <h3>Exercise</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item se3">
-                    <h3>Sets</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item rep3">
-                    <h3>Reps</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item res3">
-                    <h3>Rest</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item wei3">
-                    <h3>Weight</h3>
+                    <h3>-</h3>
                 </div>
 
             </div>
-            <div class="grid-container">
+            <div class="grid-container container-four">
                 <div class="btn-container">
                     <button class="btn btn4" type="button"><img class="random-img" src="./images/random.png" alt=""><br>
                         Back </button>
                 </div>
                 <div class="grid-item or4">
-                    <h3>Order</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item ex ex4">
-                    <h3>Exercise</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item se4">
-                    <h3>Sets</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item rep4">
-                    <h3>Reps</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item res4">
-                    <h3>Rest</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item wei4">
-                    <h3>Weight</h3>
+                    <h3>-</h3>
                 </div>
 
             </div>
-            <div class="grid-container">
+            <div class="grid-container container-five">
                 <div class="btn-container">
                     <button class="btn btn5" type="button"><img class="random-img" src="./images/random.png" alt=""><br>
                         Abs </button>
                 </div>
                 <div class="grid-item or5">
-                    <h3>Order</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item ex ex5">
-                    <h3>Exercise</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item se5">
-                    <h3>Sets</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item rep5">
-                    <h3>Reps</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item res5">
-                    <h3>Rest</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item wei5">
-                    <h3>Weight</h3>
+                    <h3>-</h3>
                 </div>
 
             </div>
-            <div class="grid-container super-pump1" id="pump1">
-                <div class="btn-container">
+            <div class="grid-container super-pump1 container-six" id="pump1">
+                <div class="btn-container ">
                     <button class="btn btn6" type="button"><img class="random-img" src="./images/random.png" alt=""><br>
                         Pump </button>
                 </div>
                 <div class="grid-item or6">
-                    <h3>X1</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item ex ex6">
-                    <h3>Exercise</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item se6">
-                    <h3>3</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item rep6">
-                    <h3>12-15</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item res6">
-                    <h3>10s</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item wei6">
-                    <h3>70%RM</h3>
+                    <h3>-</h3>
                 </div>
 
             </div>
-            <div class="grid-container super-pump2" id="pump2">
+            <div class="grid-container super-pump2 container-seven" id="pump2">
                 <div class="btn-container">
                     <button class="btn btn7" type="button"><img class="random-img" src="./images/random.png" alt=""><br>
                         Pump </button>
                 </div>
                 <div class="grid-item or7">
-                    <h3>X2</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item ex ex7">
-                    <h3>Exercise</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item se7">
-                    <h3>3</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item rep7">
-                    <h3>12-15</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item res7">
-                    <h3>90s</h3>
+                    <h3>-</h3>
                 </div>
                 <div class="grid-item wei7">
-                    <h3>70%RM</h3>
+                    <h3>-</h3>
                 </div>
 
             </div>
