Change exercise-img and exercise-description - dependend from exercise-title

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     <img class="exercise-image" src="./images/deadlift.jpg" alt="photo-exercise">
                     <div class="exercise-title">Exercise Name</div>
                     <div class="exercise-text">
-                        <p>Details</p>
+                        <p class="exercise-details">Details</p>
                     </div>
                 </div>
             </div>
