image set to basic when changing from FBW to SPLIT

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             </div>
             <div class="bottom-container">
                 <div class="image-container">
-                    <img class="exercise-image" src="./images/deadlift.jpg" alt="photo-exercise">
+                    <img class="exercise-image" src="./images/hulk.jpg" alt="photo-exercise">
                     <div class="exercise-title">Exercise Name</div>
                     <div class="exercise-text">
                         <p class="exercise-details">Details</p>
