Added Style in CSS

--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 <body>
     <div class="main-component">
         <div class="heading">
-            <h1> Compose Your Workout</h1>
-            <p> Dostosuj workout do swoich potrzeb ! </p>
+            <h1>COMPLETE </h1>
+            <h1>WORKOUT </h1>
+            <h1>ROUTINE</h1>
+            <h3> Compose your own training !</h3>
+            <img src="./images/workoutman.png" alt="">
         </div>
         <!-- Dropdown menu -->
         <div class="navbar">
             <div class="topnav-centered">
-                <div class="dropdown active fbw">
+                <div class="dropdown fbw">
                     <button class="dropbtn">FBW
                     </button>
                     <div class="dropdown-content">
