Added feature routine details

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             </div>
         </div>
 
+        
 
 
 
@@ -72,10 +73,17 @@
                 <label for="regular">Regular</label>
                 <input id="supersets" type="radio" name="intensity" value="supersets">
                 <label for="supersets">Supersets</label>
-
             </div>
-
         </div>
+        <div class="routine-details">
+            <div class="routine-name">Chest Workout</div>
+            <div><img src="./images/chestroutine.jpg" alt=""></div>
+            <div class="routine-text">The chest sessions are workouts 1 and 3 on the plan and they differ in their
+                approach to chest-building. The first session increases strength using a high number of sets but fewer
+                reps. The second uses bodybuilding principles to form a workout where you do fewer sets but a higher
+                number of reps with the aim of increasing size alongside strength.</div>
+        </div>
+
         <div class="pump-container">
             <div class="super-pump">
                 <img class="pump-img" src="./images/musculo.png" alt="pump">
@@ -108,7 +116,7 @@
 
         </div>
         <div class="main-container">
-                    
+
             <div class="grid-container container-one">
                 <div class="btn-container">
 
