Added endurance rows

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <label for="supersets">Supersets</label>
             </div>
         </div>
-        <div class="routine-details">
+<div class="routine-details">
             <div class="routine-name">Chest Workout</div>
             <div><img src="./images/chestroutine.jpg" alt=""></div>
             <div class="routine-text">The chest sessions are workouts 1 and 3 on the plan and they differ in their
@@ -89,6 +89,12 @@
                 <img class="pump-img" src="./images/musculo.png" alt="pump">
                 <div class="pump-txt">
                     <h3 id="super-pump-header"> Super Pump</h3>
+                </div>
+            </div>
+            <div class="super-endurance">
+                <img class="pump-img" src="./images/musculo.png" alt="endurance">
+                <div class="pump-txt">
+                    <h3 id="super-pump-header"> Super Endurance</h3>
                 </div>
             </div>
         </div>
@@ -289,6 +295,58 @@
                     <h3>-</h3>
                 </div>
                 <div class="grid-item wei7">
+                    <h3>-</h3>
+                </div>
+
+            </div>
+            <!-- Eight -->
+            <div class="grid-container super-endurance1 container-eight" id="endurance1">
+                <div class="btn-container">
+                    <button class="btn btn8" type="button"><img class="random-img" src="./images/random.png" alt=""><br>
+                        Endurance </button>
+                </div>
+                <div class="grid-item or8">
+                    <h3>-</h3>
+                </div>
+                <div class="grid-item ex ex8">
+                    <h3>-</h3>
+                </div>
+                <div class="grid-item se8">
+                    <h3>-</h3>
+                </div>
+                <div class="grid-item rep8">
+                    <h3>-</h3>
+                </div>
+                <div class="grid-item res8">
+                    <h3>-</h3>
+                </div>
+                <div class="grid-item wei8">
+                    <h3>-</h3>
+                </div>
+
+            </div>
+            <!-- Ninth -->
+            <div class="grid-container super-endurance2 container-nine" id="endurance2">
+                <div class="btn-container">
+                    <button class="btn btn9" type="button"><img class="random-img" src="./images/random.png" alt=""><br>
+                        Endurance </button>
+                </div>
+                <div class="grid-item or9">
+                    <h3>-</h3>
+                </div>
+                <div class="grid-item ex ex9">
+                    <h3>-</h3>
+                </div>
+                <div class="grid-item se9">
+                    <h3>-</h3>
+                </div>
+                <div class="grid-item rep9">
+                    <h3>-</h3>
+                </div>
+                <div class="grid-item res9">
+                    <h3>-</h3>
+                </div>
+                <div class="grid-item wei9">
                     <h3>-</h3>
                 </div>
 
