Add Super Endurance button and Eight and Nine Container

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                     </button>
                     <div class="dropdown-content">
-                        <a class="split-chest" href="#">Chest</a>
+                        <a class="split-chest" href="javascript:void(0)">Chest</a>
                         <a href="#">Shoulders</a>
                         <a href="#">Legs</a>
                     </div>
@@ -249,7 +249,7 @@
                 </div>
 
             </div>
-            <div class="grid-container super-pump1 container-six" id="pump1">
+            <div class="grid-container container-six" id="pump1" >
                 <div class="btn-container ">
                     <button class="btn btn6" type="button"><img class="random-img" src="./images/random.png" alt=""><br>
                         Pump </button>
@@ -274,7 +274,7 @@
                 </div>
 
             </div>
-            <div class="grid-container super-pump2 container-seven" id="pump2">
+            <div class="grid-container container-seven" id="pump2">
                 <div class="btn-container">
                     <button class="btn btn7" type="button"><img class="random-img" src="./images/random.png" alt=""><br>
                         Pump </button>
