Default skin added, resets table data to "-", changed buttons style.

--- a/index.html
+++ b/index.html
@@ -255,22 +255,22 @@
                         Pump </button>
                 </div>
                 <div class="grid-item or6">
-                    <h3>-</h3>
+                    <h3>E1</h3>
                 </div>
                 <div class="grid-item ex ex6">
                     <h3>-</h3>
                 </div>
                 <div class="grid-item se6">
-                    <h3>-</h3>
+                    <h3>3</h3>
                 </div>
                 <div class="grid-item rep6">
-                    <h3>-</h3>
+                    <h3>12-15</h3>
                 </div>
                 <div class="grid-item res6">
-                    <h3>-</h3>
+                    <h3>10s</h3>
                 </div>
                 <div class="grid-item wei6">
-                    <h3>-</h3>
+                    <h3>adjust</h3>
                 </div>
 
             </div>
@@ -280,22 +280,22 @@
                         Pump </button>
                 </div>
                 <div class="grid-item or7">
-                    <h3>-</h3>
+                    <h3>E2</h3>
                 </div>
                 <div class="grid-item ex ex7">
                     <h3>-</h3>
                 </div>
                 <div class="grid-item se7">
-                    <h3>-</h3>
+                    <h3>3</h3>
                 </div>
                 <div class="grid-item rep7">
-                    <h3>-</h3>
+                    <h3>12-15</h3>
                 </div>
                 <div class="grid-item res7">
-                    <h3>-</h3>
+                    <h3>90s</h3>
                 </div>
                 <div class="grid-item wei7">
-                    <h3>-</h3>
+                    <h3>adjust</h3>
                 </div>
 
             </div>
