Buttons image changed, pump and endurance cells hidden

--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
 
         <div class="pump-container">
             <div class="super-pump">
-                <img class="pump-img" src="./images/musculo.png" alt="pump">
+                <img class="pump-img" src="./images/pump.png" alt="pump">
                 <div class="pump-txt">
-                    <h3 id="super-pump-header"> Super Pump</h3>
+                    <h3 id="super-pump-header">  Extra Pump</h3>
                 </div>
             </div>
             <div class="super-endurance">
-                <img class="pump-img" src="./images/musculo.png" alt="endurance">
+                <img class="pump-img" src="./images/heart.png" alt="endurance">
                 <div class="pump-txt">
-                    <h3 id="super-pump-header"> Super Endurance</h3>
+                    <h3 id="super-pump-header"> Extra Endurance</h3>
                 </div>
             </div>
         </div>
@@ -249,7 +249,7 @@
                 </div>
 
             </div>
-            <div class="grid-container container-six" id="pump1" >
+            <div class="grid-container container-six" style="display: none;" id="pump1" >
                 <div class="btn-container ">
                     <button class="btn btn6" type="button"><img class="random-img" src="./images/random.png" alt=""><br>
                         Pump </button>
@@ -274,7 +274,7 @@
                 </div>
 
             </div>
-            <div class="grid-container container-seven" id="pump2">
+            <div class="grid-container container-seven" style="display: none;" id="pump2">
                 <div class="btn-container">
                     <button class="btn btn7" type="button"><img class="random-img" src="./images/random.png" alt=""><br>
                         Pump </button>
@@ -300,7 +300,7 @@
 
             </div>
             <!-- Eight -->
-            <div class="grid-container super-endurance1 container-eight" id="endurance1">
+            <div class="grid-container super-endurance1 container-eight" style="display: none;" id="endurance1">
                 <div class="btn-container">
                     <button class="btn btn8" type="button"><img class="random-img" src="./images/random.png" alt=""><br>
                         Endurance </button>
@@ -326,7 +326,7 @@
 
             </div>
             <!-- Ninth -->
-            <div class="grid-container super-endurance2 container-nine" id="endurance2">
+            <div class="grid-container super-endurance2 container-nine" style="display: none;" id="endurance2">
                 <div class="btn-container">
                     <button class="btn btn9" type="button"><img class="random-img" src="./images/random.png" alt=""><br>
                         Endurance </button>
