Added: Active Buttons, Scroll to Exercise Details

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="grid-container container-one">
                 <div class="btn-container">
 
-                    <button class="btn btn1" type="button"><img class="random-img" src="./images/random.png" alt="">
+                    <button class="btn btn1" type="button"><img class="random-img" src="./images/random.png" alt="random">
                         Shoulders </button>
                 </div>
                 <div class="grid-item or1">
