Top Image changed, bottom Image added shadow

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 </div>
 
             </div>
-            <div class="grid-container container-six" style="display: none;" id="pump1" >
+            <div class="grid-container container-six"  id="pump1" >
                 <div class="btn-container ">
                     <button class="btn btn6" type="button"><img class="random-img" src="./images/random.png" alt=""><br>
                         Pump </button>
@@ -275,7 +275,7 @@
                 </div>
 
             </div>
-            <div class="grid-container container-seven" style="display: none;" id="pump2">
+            <div class="grid-container container-seven"  id="pump2">
                 <div class="btn-container">
                     <button class="btn btn7" type="button"><img class="random-img" src="./images/random.png" alt=""><br>
                         Pump </button>
@@ -301,7 +301,7 @@
 
             </div>
             <!-- Eight -->
-            <div class="grid-container super-endurance1 container-eight" style="display: none;" id="endurance1">
+            <div class="grid-container super-endurance1 container-eight"  id="endurance1">
                 <div class="btn-container">
                     <button class="btn btn8" type="button"><img class="random-img" src="./images/random.png" alt=""><br>
                         Endurance </button>
@@ -327,7 +327,7 @@
 
             </div>
             <!-- Ninth -->
-            <div class="grid-container super-endurance2 container-nine" style="display: none;" id="endurance2">
+            <div class="grid-container super-endurance2 container-nine"  id="endurance2">
                 <div class="btn-container">
                     <button class="btn btn9" type="button"><img class="random-img" src="./images/random.png" alt=""><br>
                         Endurance </button>
@@ -364,7 +364,7 @@
 
             <div class="bottom-container">
                 <div class="image-container">
-                    <img class="exercise-image" src="./images/hulk.jpg" alt="photo-exercise">
+                    <img class="exercise-image" src="./images/bottomimage.jpg" alt="photo-exercise">
                     <div class="exercise-title">Exercise Name</div>
                     <div class="exercise-text">
                         <p class="exercise-details">Details</p>
