Errors update when no links available

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Workout Programmer</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@700&display=swap" rel="stylesheet">
 </head>
 
@@ -45,7 +45,7 @@
         <div class="navbar">
             <div class="topnav-centered">
                 <div class="dropdown fbw">
-                    <button class="dropbtn">FBW
+                    <button class="dropbtn">FullBodyWorkout
                     </button>
                     <div class="dropdown-content">
 
@@ -57,8 +57,8 @@
                     </button>
                     <div class="dropdown-content">
                         <a class="split-chest" href="javascript:void(0)">Chest</a>
-                        <a href="#">Shoulders</a>
-                        <a href="#">Legs</a>
+                        <a class="split-shoulders" href="javascript:void(0)">Shoulders</a>
+                        <a class="split-legs "href="javascript:void(0)">Legs</a>
                     </div>
                 </div>
                 <div class="dropdown">
@@ -66,10 +66,10 @@
 
                     </button>
                     <div class="dropdown-content">
-                        <a href="#">Lower Back Pain</a>
-                        <a href="#">Upper Back Pain</a>
-                        <a href="#">ACL Treatment</a>
-                        <a href="#">Shoulder Mobility</a>
+                        <a class="lower-back-pain href="javascript:void(0)">Lower Back Pain</a>
+                        <a class="back-pain href="javascript:void(0)">Upper Back Pain</a>
+                        <a class="acl-treatment href="javascript:void(0)">ACL Treatment</a>
+                        <a class="shoulder-mobility href="javascript:void(0)">Shoulder Mobility</a>
                     </div>
                 </div>
             </div>
