Hover Exercise Effect

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
 <br><br>
     If you are willing to check more details about an exercise just click at it's name.
 </p>
-            <div class="extend-container">
-                <img class="extend" src="./images/extend.png" alt="extend">
-            </div>
+            
+        </div>
+        <div class="extend-container">
+            <img class="extend" src="./images/extend.png" alt="extend">
         </div>
     </div>
         <!-- Dropdown menu -->
@@ -156,7 +157,7 @@
                 <div class="grid-item or1">
                     <h3>-</h3>
                 </div>
-                <div id="exercise1" class="grid-item ex ex1">
+                <div id="exercise1" class="grid-item ex ex1 exover">
                     <h3>-</h3>
                 </div>
                 <div class="grid-item se1">
@@ -181,7 +182,7 @@
                 <div class="grid-item or2">
                     <h3>-</h3>
                 </div>
-                <div class="grid-item ex ex2">
+                <div class="grid-item ex ex2 exover">
                     <h3>-</h3>
                 </div>
                 <div class="grid-item se2">
@@ -206,7 +207,7 @@
                 <div class="grid-item or3">
                     <h3>-</h3>
                 </div>
-                <div class="grid-item ex ex3">
+                <div class="grid-item ex ex3 exover">
                     <h3>-</h3>
                 </div>
                 <div class="grid-item se3">
@@ -231,7 +232,7 @@
                 <div class="grid-item or4">
                     <h3>-</h3>
                 </div>
-                <div class="grid-item ex ex4">
+                <div class="grid-item ex ex4 exover">
                     <h3>-</h3>
                 </div>
                 <div class="grid-item se4">
@@ -256,7 +257,7 @@
                 <div class="grid-item or5">
                     <h3>-</h3>
                 </div>
-                <div class="grid-item ex ex5">
+                <div class="grid-item ex ex5 exover">
                     <h3>-</h3>
                 </div>
                 <div class="grid-item se5">
@@ -281,7 +282,7 @@
                 <div class="grid-item or6">
                     <h3>E1</h3>
                 </div>
-                <div class="grid-item ex ex6">
+                <div class="grid-item ex ex6 exover">
                     <h3>-</h3>
                 </div>
                 <div class="grid-item se6">
@@ -306,7 +307,7 @@
                 <div class="grid-item or7">
                     <h3>E2</h3>
                 </div>
-                <div class="grid-item ex ex7">
+                <div class="grid-item ex ex7 exover">
                     <h3>-</h3>
                 </div>
                 <div class="grid-item se7">
@@ -332,7 +333,7 @@
                 <div class="grid-item or8">
                     <h3>-</h3>
                 </div>
-                <div class="grid-item ex ex8">
+                <div class="grid-item ex ex8 exover">
                     <h3>-</h3>
                 </div>
                 <div class="grid-item se8">
@@ -358,7 +359,7 @@
                 <div class="grid-item or9">
                     <h3>-</h3>
                 </div>
-                <div class="grid-item ex ex9">
+                <div class="grid-item ex ex9 exover">
                     <h3>-</h3>
                 </div>
                 <div class="grid-item se9">
