Added contact form

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                     </div>
                 </div>
             </div>
-
+<!-- Bottom Container with Image-->
             <div class="bottom-container">
                 <div class="image-container">
                     <img class="exercise-image" src="./images/bottomimage.jpg" alt="photo-exercise">
@@ -395,7 +395,21 @@
                     </div>
                 </div>
             </div>
-
+<!-- Form Container-->
+        <div class="form-container">
+            <div id="error"></div>
+            <form action="P:/Programowanie/WorkoutProgrammer/index.html" method="GET">
+            <div>
+                <label for="name">Name</label>
+                <input id="name" name="name" type="text">
+            </div>
+            <div>
+                <label for="email">Email</label>
+                <input id="email" name="email" type="email">
+            </div>
+            <button type="submit">Submit</button>
+            </form>
+        </div>
 
 
         </div>
