--- a/index.html
+++ b/index.html
@@ -452,6 +452,7 @@
     </div>
 
     <script type="text/javascript" src="./js/validation.js"></script>
+    <script type="text/javascript" src="./js/http.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
 
 </body>
