installed Cypress package, created 16 test cases in folder WorkoutCreatorForm, added attachements in fixtures folder

--- a/index.html
+++ b/index.html
@@ -424,7 +424,9 @@
                 </select>
             </div>
             <div class="form-input">
+            
             <label for="gender">Gender</label>
+            <input type="radio" id="genderNotSelected" name="gender" value="" visibility: hidden>
             <input type="radio" id="male" name="gender" value="male">
             <label for="male">Male</label>
             <input type="radio" id="female" name="gender" value="female">
