Cypress deault testing screen resolution changed, Added css and title to contact form

--- a/index.html
+++ b/index.html
@@ -396,8 +396,13 @@
                 </div>
             </div>
 <!-- Form Container-->
+
         <div class="form-container">
+            
             <div class="inputs-container">
+                <div class=form-title>
+                    <h1>Contact Us</h1>
+                </div>
             <div class="form-error" id="error"></div>
             <h5>fields marked with * are required</h5>
             <form id="form" action="P:/Programowanie/WorkoutProgrammer/index.html" method="GET">
@@ -445,7 +450,7 @@
                 <label for="textArea">Message *</label>
                 <textarea class="form-input" id="textArea" name="textArea" rows="4" cols="50"></textarea>
             </div>
-            <button type="submit">Submit</button>
+            <button class="submit-buton" type="submit">Submit</button>
             <!-- <div class="form-success" id="success"></div> -->
             </form>
         </div>
