Submission Form Added

--- a/index.html
+++ b/index.html
@@ -405,7 +405,8 @@
                 </div>
             <div class="form-error" id="error"></div>
             <h5>fields marked with * are required</h5>
-            <form id="form" action="P:/Programowanie/WorkoutProgrammer/index.html" method="GET">
+            <form id="form" >
+                <!-- action="/api/form" method="POST" -->
             <div>
                 <label for="firstName">First Name *</label>
                 <input class="form-input" id="firstName" name="firstName" type="text">
@@ -451,7 +452,7 @@
                 <textarea class="form-input" id="textArea" name="textArea" rows="4" cols="50"></textarea>
             </div>
             <button class="submit-buton" type="submit">Submit</button>
-            <!-- <div class="form-success" id="success"></div> -->
+            <div class="form-success" id="success"></div>
             </form>
         </div>
         </div>
