--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
             <div class="form-input">
             
             <label for="gender">Gender</label>
-            <input type="radio" id="genderNotSelected" name="gender" value="" visibility: hidden>
+            <input type="radio" id="genderNotSelected" checked name="gender" value="Not Selected" visibility: hidden>
             <input type="radio" id="male" name="gender" value="male">
             <label for="male">Male</label>
             <input type="radio" id="female" name="gender" value="female">
