Cypress scrypts validating form submission

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                 <label for="textArea">Message *</label>
                 <textarea class="form-input" id="textArea" name="textArea" rows="4" cols="50"></textarea>
             </div>
-            <button class="submit-buton" type="submit">Submit</button>
+            <button id="submitButton" class="submit-buton" type="submit">Submit</button>
             <div class="form-success" id="success"></div>
             </form>
         </div>
